# access-controller

./: .gitignore  README.md
access-controller/: CMakeLists.txt  Makefile
circuits/: Wiegand.sch  access-controller-cache.lib  access-controller-rescue.lib  access-controller.kicad_prl  access-controller.kicad_sch  access-controller.net  access-controller.pro  access-controller.sch  access-controller.sch-bak  access-controller.xml  control.kicad_sch  control.sch  door.sch  door.sch-bak  ethernet.kicad_sch  ethernet.sch  fp-info-cache  hvac.sch  hvac.sch-bak  interface.sch  lock.sch  microcontroller.kicad_sch  microcontroller.sch  microcontroller.sch-bak  mosfet.sch  optocoupler.sch  poe.kicad_sch  poe.sch  power.kicad_sch  power.sch  power.sch-bak  quad-optocoupler.kicad_sch  quad-optocoupler.sch  sym-lib-table  usb.kicad_sch  usb.sch  usb.sch-bak  wiegand.kicad_sch
circuits-strike/: fp-info-cache  microcontroller.kicad_sch  power.kicad_sch  power.sch  strike-controller.kicad_prl  strike-controller.kicad_pro  strike-controller.kicad_sch  strike-controller.xml  sym-lib-table  transistor_array.kicad_sch  usb.kicad_sch  usb.sch
circuits_BAK/: access-controller.kicad_pro  access-controller.kicad_sch  access-controller.xml  control.kicad_sch  ethernet.kicad_sch  (+7 more)
code/controller_mini/main/: CMakeLists.txt  automation.c  main.c  main.orig
code/controller_mini/main/public/: app.html  app.js  script.js  style.css
code/controller_mini/main/services/: authorize.c  authorize.h  authorize.orig  buzzer.h  config_manager.c  exit.c  exit.h  file_server.c  fob.c  fob.h  gpio.c  gpio.h  keypad.h  lock.c  lock.h  motion.c  motion.h  network_manager.h  radar.h  server.h  service_manager.h  station.c  station.orig  store.orig  utilities.c  wiegand.c  wiegand.h  ws_server.c
code/controller_mini/main/services/drivers/: i2c.c  max11617.c
(+529 files in other folders)
