idf_component_register(SRCS "main.c"
                      "automation.c"
                      "services/ap.c"
                      "services/authorize.c"
                      "services/buzzer.c"
                      "services/config_manager.c"
                      "services/exit.c"
                      "services/file_server.c"
                      "services/fob.c"
                      "services/gpio.c"
                      "services/keypad.c"
                      "services/lock.c"
                      "services/motion.c"
                      "services/network_manager.c"
                      "services/ota_manager.c"
                      "services/radar.c"
                      "services/server.c"
                      "services/service_manager.c"
                      "services/station.c"
                      "services/storage.c"
                      "services/store.c"
                      "services/utilities.c"
                      "services/wiegand.c"
                      "services/ws_client.c"
                      "services/ws_server.c"
                      "services/drivers/adc.c"
                      "services/drivers/i2c.c"
                      "services/drivers/max11617.c"
                      "services/drivers/mcp23x17.c"
                      INCLUDE_DIRS "."
                      "services"
                      "services/drivers"
                      EMBED_FILES "public/favicon.ico" 
                                  "public/index.html"
                                  "public/app.html"
                                  "public/script.js" 
                                  "public/app.js" 
                                  "public/style.css")
